# lm-dpl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: county_taxlots_endpoints.yaml
docker/: docker-compose.yml
docs/: data_sources.md  pipeline_execution.md
lm_dpl/: cli.py
lm_dpl/clients/: __init__.py  db_manager.py  endpoints.yaml  restclient.py  sdaclient.py
lm_dpl/clients/sql/: pg_public_schema.sql  pg_stage_schema.sql
lm_dpl/forest/: parcel_elevation.py
lm_dpl/forest/sql/: oregon_fortype_schema.sql
lm_dpl/parcels/: oregon_app_coa.sql  oregon_app_populationpoint.sql  oregon_app_taxlot.sql  oregon_fpd_post.sql  oregon_plss_post.sql  oregon_sfd_post.sql  oregon_taxlot_from_county.sql  oregon_taxlot_post.sql  oregon_taxlots_from_county.sql  oregon_zoning_post.sql  processor.py  washington_app_populationpoint.sql  washington_app_taxlot.sql  washington_plss_post.sql  washington_taxlot_post.sql
lm_dpl/parcels/sql/: oregon_django_models.sql  oregon_parcels.sql
lm_dpl/soil/: oregon_app_soil.sql  oregon_app_soil_schema.sql  oregon_soils.sql  processor.py  washington_app_soil.sql  washington_app_soil_schema.sql
lm_dpl/utils/: __init__.py  config.py  db_utils.py  emailu.py  logging_utils.py
notebooks/: fetch_dem_dw_rasters.ipynb
scripts/: export_tables  get_endpoint_metadata.py  test_restore.sh
tests/: test_cli.py
